--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <nav class="navbar fixed-top py-0">
         <div class="container py-0 px-3">
           <a class="navbar-brand py-3" href="#">
-            <img src="img/logo.svg" alt="ロゴ" style="height: 40px" />
+            <img src="images/logo.svg" alt="ロゴ" style="height: 40px" />
           </a>
 
           <div class="ms-auto">
